--- a/RegisteringUsers/Views/Account/RegisterStu.cshtml
+++ b/RegisteringUsers/Views/Account/RegisterStu.cshtml
@@ -29,7 +29,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.MajorCode, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownListFor(m => m.MajorCode,new SelectList(Model.ListOfMajors,"MajorCode","MajorDesc"),"", new { @class = "form-control" })
+            @Html.DropDownListFor(m => m.MajorCode,new SelectList(Model.ListOfMajors,"MajorCode","MajorDesc"),"", new { @class = "form-control select" })
         </div>
     </div>
     <div class="form-group">
@@ -59,4 +59,8 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+        $("select").chosen();
+    </script>
 }
